# gpu-fan-controller

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: FindNVCtrl.cmake
src/: CMakeLists.txt  main.cpp
src/fan-controller/: CMakeLists.txt  fancontroller.cpp  fancontroller.hpp
src/gpu-controllers/: CMakeLists.txt  gpucontrollers.hpp  nvidiacontroller.cpp
src/utils/: CMakeLists.txt  utils.cpp  utils.hpp
